# StructureDesignModel

./: CMakeLists.txt
adapter/: Adapter.cpp  Adapter.h  main.cpp
adapter1/: Adapter.cpp  Adapter.h  main.cpp
bridge/: Abstraction.cpp  Abstraction.h  AbstractionImp.cpp  AbstractionImp.h  main.cpp
composite/: Component.cpp  Component.h  Composite.cpp  Composite.h  Leaf.cpp  Leaf.h  main.cpp
decorator1/: Decorator.cpp  Decorator.h  main.cpp
facade/: Facade.cpp  Facade.h  main.cpp
flyweight/: Flyweight.cpp  Flyweight.h  FlyweightFactory.cpp  FlyweightFactory.h  main.cpp
proxy0/: Proxy.cpp  Proxy.h  main.cpp
